<resources>
    <string name="app_name">Events</string>
    <string name="splash_text">Events are loading...</string>
    <string name="no_valid_email_message">Selected account doesn\'t have a valid email, please select another one.</string>
    <string name="select_account_with_email_message">Please select an account with a valid email address.</string>
    <string name="report">Report event</string>
    <string name="nav_social">Social</string>
    <string name="nav_item_create">Create Event</string>
    <string name="nav_item_myEvents">My Events</string>
    <string name="nav_item_interested">Interested</string>
    <string name="nav_item_going">Going</string>
    <string name="nav_item_invitations">Invitations</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_messages">Messages</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_sign_in">Sign in</string>
    <string name="nav_account">Account</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="filter_events">Filter Events</string>
    <string name="setDistanceFilter">Set distance:</string>
    <string name="setToFilter">Set to: </string>
    <string name="sortByFilter">Sort by: </string>
    <string name="forYouFilter">For you</string>
    <string name="recentFilter">Recent</string>
    <string name="popularFilter">Soonest</string>
    <string name="music">Music</string>
    <string name="party">Party</string>
    <string name="sports">Sports</string>
    <string name="talks">Talks</string>
    <string name="educational">Educational</string>
    <string name="charity">Charity</string>
    <string name="startingDateFilter">Starting date</string>
    <string name="startingTimeFilter">Starting time</string>
    <string name="endingDateFilter">Ending date</string>
    <string name="endingTimeFilter">Ending time</string>
    <string name="saveFilters">Save filters</string>
    <string name="privateEventFilter">Private events</string>
    <string name="createEvent">Create event</string>
    <string name="selectALocation">Select a location</string>
    <string name="eventName">Event name</string>
    <string name="eventDescription">Event description</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="sign_in_continue_as_anonymous">Continue As Anonymous</string>
    <string name="login_registration_email_hint">Email</string>
    <string name="registration_username_hint">Profile name</string>
    <string name="login_registration_password_hint">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_continue_with_social_media">Continue with social media</string>
    <string name="title_facebook_logo">Facebook</string>
    <string name="title_google_logo" translatable="false">Google Gmail</string>
    <string name="login_back_to_register">Back to Register</string>
    <string name="register_select_photo">SELECT&#10;PHOTO</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="register_already_have_account">Already have an account?</string>
    <string name="register_register_with_social_media">Register with social media</string>
    <string name="privateEventCreateEvent">Private event</string>
    <string name="map">Map</string>
    <string name="retry">Try again</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="menu_remove_friend">Remove friend</string>
    <string name="title_add_friend">Add friend</string>
    <string name="msg_search_by_username">Search by profile name</string>
    <string name="action_serach">Search</string>
    <string name="title_pref_application">Application</string>
    <string name="title_pref_language">Language</string>
    <string name="msg_pref_language">Choose an application language</string>
    <string name="title_pref_default_event_filter_sort">Default event filter sort</string>
    <string name="msg_pref_default_event_filter_sort">Choose a default event filter sort for event filtering</string>
    <string name="title_pref_map">Map</string>
    <string name="title_pref_default_distance_value">Default distance value</string>
    <string name="msg_pref_set_default_radius_distance">Set the default radius distance value</string>
    <string name="title_pref_dialog_default_radius_distance">Default distance value</string>
    <string name="msg_pref_dialog_default_radius_distance">Choose default radius distance value</string>
    <string name="title_pref_default_map_zoom">Default map zoom</string>
    <string name="msg_pref_defauilt_map_zoom">Choose a default map zoom for map feature</string>
    <string name="title_pref_facebook_events">Sync with your Facebook events</string>
    <string name="msg_pref_facebook_events">Manage your Facebook events with the Event app</string>
    <string name="title_pref_sync_data_facebook">Sync with your Facebook profile</string>
    <string name="msg_pref__sync_data_facebook">Set your profile image and name using Facebook</string>
    <string name="see_on_map">See on map</string>
    <string name="see_all">See all</string>
    <string name="see_comments">See comments</string>
    <string name="similar_posts">Similar posts</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="nav_item_home">Home</string>
    <string name="authors_events">Authors Events</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_dialog">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="gps_dialog2">These permissions are mandatory to get your location. Do you want to allow them?</string>
    <string name="eventPlace">Event place</string>
    <string name="createEventValidation1">Please select a location for your event.</string>
    <string name="createEventValidation2">Please enter a place for your event.</string>
    <string name="createEventValidation3">Please enter a name for your event.</string>
    <string name="createEventValidation4">Please enter a description for your event.</string>
    <string name="createEventValidation5">Please select a category for your event.</string>
    <string name="createEventValidation6">Please enter a starting date for your event.</string>
    <string name="createEventValidation7">Please enter a starting time for your event.</string>
    <string name="createEventValidation8">Please enter a ending date for your event.</string>
    <string name="createEventValidation9">Please enter a ending time for your event.</string>
    <string name="createEventValidation10">Please make sure that your starting date and time is before ending date and time.</string>
    <string name="blankFieldError">This field cannot be blank.</string>
    <string name="failed">Connection problem!</string>
    <string name="eventCreated">Event created!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oops">Oops!</string>
    <string name="check_your_internet">Please check your internet connection</string>
    <string name="there_is_no_internet">There is no internet connection</string>
    <string name="try_again_later">Please try again later</string>
    <string name="there_is_no_server">Looks like we can\'t connect to the server</string>
    <string name="invite_friends">Invite friends to event</string>
    <string name="delete_account">Delete Account</string>
    <string name="unlink_account">Unlink Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="update_profile">Update profile</string>
    <string name="profile_name">Profile name</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="remove_profile_image">Remove profile image</string>
    <string name="registerUserValidationName">Please enter your new profile name.</string>
    <string name="registerUserValidationName2">Name must have at least 2 letters including \' - and .</string>
    <string name="registerUserValidationEmail">Please enter your email.</string>
    <string name="registerUserValidationEmail2">Please enter a valid email.</string>
    <string name="emailAlreadyExists">Email is already registered!</string>
    <string name="registerUserValidationPsw">Please enter your new profile password.</string>
    <string name="registerUserValidationPsw2">Please reenter your new profile password.</string>
    <string name="loginPasswordBlank">Password can\'t be empty.</string>
    <string name="registerUserValidationPsw3">Entered passwords don\'t match!</string>
    <string name="registerUserValidationPsw4">New passwords must contain at least: \n1. 7 characters \n2.  one small and one capital letter \n3.  one number or special character</string>
    <string name="facebookNotAvailable">Facebook profile is not available</string>
    <string name="userNotFound">Email and password don\'t match any known user</string>
    <string name="emailNotFound">Email don\'t match any known user</string>
    <string name="serverToBusy">Please try later, server is too busy.</string>
    <string name="forgottenPswSent">We sent you a new password to your registered email!</string>
    <string name="confirmRegistration">You can login after verifying your email</string>
    <string name="latestMessageMessagePrefixInOurMessage">You: </string>
    <string name="updateEvent">Update event</string>
    <string name="eventUpdated">Event updated</string>
    <string name="commentAdded">Comment added!</string>
    <string name="notGoing">Not going</string>
    <string name="notInterested">Not interested</string>
    <string name="notLoggedInComment">\"You must  log in to comment\"</string>
    <string name="eventOrganizer">Event organizer</string>
    <string name="eventsOrganized">events organized</string>
    <string name="friend_requests">Friend requests</string>
    <string name="request_accepted">Thank you for friendship</string>
    <string name="request_declined">Request canceled</string>
    <string name="cancel_request">Cancel request</string>
    <string name="friend_removed">Friend removed</string>
    <string name="friend_request_send">Friend request send</string>
    <string name="categoryFilter">Category:</string>
    <string name="action_settings">Settings</string>
    <string name="your_profile_page">Your profile page</string>
    <string name="remove_account">Remove account</string>
    <string name="unlink_facebook">Unlink Facebook</string>
    <string name="enter_message_chat_log">Enter Message</string>
    <string name="send">Send</string>
    <string name="invited_by">Invited by:</string>
    <string name="email_user_detail">Email:</string>
    <string name="street_preferences">Street</string>
    <string name="city_preferences">City</string>
    <string name="country_preferences">Country</string>
    <string name="says_notification_message">Says:</string>
    <string name="friend_request_notification">You got new friend request!</string>
    <string name="joined_event_invitations">You assigned as going to the event!</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="we_just_need_your_registered_email_address">We just need your registered email address</string>
    <string name="to_send_you_a_brand_new_password">to send you a brand new password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>