<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_pref_application">
        <ListPreference
            android:defaultValue="2"
            android:entries="@array/updateDefaultEventSort"
            android:entryValues="@array/updateDefaultEventSortValues"
            android:key="pref_default_event_sort"
            android:summary="%s"
            android:title="@string/title_pref_default_event_filter_sort" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/map">
        <EditTextPreference
            android:defaultValue="100"
            android:dialogMessage="@string/msg_pref_dialog_default_radius_distance"
            android:dialogTitle="@string/title_pref_dialog_default_radius_distance"
            android:inputType="number"
            android:key="pref_default_distance2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/msg_pref_set_default_radius_distance"
            android:title="@string/title_pref_default_distance_value" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/updateDefaultZoomOption"
            android:entryValues="@array/updateDefaultZoomOptionValues"
            android:key="pref_default_map_zoom"
            android:summary="%s"
            android:title="@string/title_pref_default_map_zoom" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_facebook_logo">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_facebook_events"
            android:summary="@string/msg_pref_facebook_events"
            android:title="@string/title_pref_facebook_events" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_sync_user_data_facebook"
            android:summary="@string/msg_pref__sync_data_facebook"
            android:title="@string/title_pref_sync_data_facebook" />
    </PreferenceCategory>
</PreferenceScreen>