<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/navigation_item_create"
                android:icon="@drawable/ic_add_event_light"
                android:title="@string/nav_item_create" />
            <item
                android:id="@+id/navigation_item_myEvents"
                android:icon="@drawable/ic_my_events_light"
                android:title="@string/nav_item_myEvents" />
            <item
                android:id="@+id/navigation_item_interested"
                android:icon="@drawable/ic_interested_light"
                android:title="@string/nav_item_interested" />

            <item
                android:id="@+id/navigation_item_going"
                android:icon="@drawable/ic_going_light"
                android:title="@string/nav_item_going" />
        </menu>
    </item>

    <item android:title="@string/nav_social">
        <menu>
            <item
                android:id="@+id/navigation_item_invitations"
                android:icon="@drawable/ic_invitations"
                android:title="@string/nav_item_invitations" />
            <item
                android:id="@+id/navigation_item_friends"
                android:icon="@drawable/ic_friends"
                android:title="@string/nav_item_friends" />
        </menu>
    </item>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/navigation_item_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/navigation_item_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_item_logout" />
        </menu>
    </item>

</menu>